# seqkit

./: .gitignore  Cargo.toml  LICENSE  README.md  align_index.fa  align_index.fa.fai  hg19-genes.bed
archived/: fasta_mappability_track.rs
rust-htslib-0.15-mod/src/bam/: mod.rs
src/: common.rs  fasta_add_barcode.rs  fasta_add_base_qualities.rs  fasta_barcode_to_header.rs  fasta_check.rs  fasta_convert_basespace.rs  fasta_deinterleave.rs  fasta_demultiplex.rs  fasta_extract_dual_umi.rs  fasta_gc_content.rs  fasta_interleave.rs  fasta_main.rs  fasta_mappability_track.rs  fasta_mask_by_quality.rs  fasta_remove_base_qualities.rs  fasta_repair.rs  fasta_simplify_read_ids.rs  fasta_split_into_anchors.rs  fasta_statistics.rs  fasta_to_raw.rs  fasta_trim.rs  fasta_trim_by_quality.rs  genome_reader.rs  sam_concatenate.rs  sam_consensus.rs  sam_count.rs  sam_coverage_histogram.rs  sam_discard_tail_artifacts.rs  sam_filter_by_sequence.rs  sam_fragment_lengths.rs  sam_fragments.rs  sam_main.rs  sam_mark_duplicates.rs  sam_merge.rs  sam_minimize.rs  sam_qname_from_tags.rs  sam_recalculate_tlen.rs  sam_repair.rs  sam_simplify_qnames.rs  sam_statistics.rs  (+4 more)
src/fasta/: main.rs  mappability_track.rs  mapq_track.rs  mask_by_quality.rs  pairwise_blast.rs  pairwise_similarity.rs  to_raw.rs  trim_by_quality.rs
src/sam/: count.rs  discard_tail_artifacts.rs  fragment_lengths.rs  fragments.rs  genome_reader.rs  main.rs  mark_duplicates.rs  on_target.rs  sam.rs  statistics.rs
