[package]
name = "seqkit"
version = "0.1.0"
authors = ["Matti Annala <matti.annala@uta.fi>"]

[dependencies]
docopt = "*"
bio = "0.17"
rust-htslib = "0.15.0"
flate2 = "*"
ascii = "*"
num-traits = "0.1.40"
ansi_term = "*"
regex = "*"



[[bin]]
name = "fasta"
path = "src/fasta_main.rs"

[[bin]]
name = "sam"
path = "src/sam_main.rs"
