[package]
name = "seqkit"
version = "0.8.0"
edition = "2021"
authors = ["Matti Annala <matti.annala@tuni.fi>", "Anssi Nurminen <anssi.nurminen@tuni.fi>"]

[dependencies]
docopt = "1.0"
bio = "0.19"
rust-htslib = { version = "0.31", default-features = false }
regex = "1.0"
rand = "0.5"
itertools = "0.8"
smartstring = "1"

[[bin]]
name = "fasta"
path = "src/fasta_main.rs"

[[bin]]
name = "sam"
path = "src/sam_main.rs"
